Included proper div separation for headers, nav, and footer for the homepage

--- a/index.html
+++ b/index.html
@@ -2,16 +2,24 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Test title</title>
+        <title>Homepage - Daniel Vong Portfolio Web and Script Assignment 1</title>
     </head>
     <body>
-        <h1>Test Header</h1>
-        <p>First test push</p>
-        <ul>
-            <li><a href ="index.html">Home</a></li>
-            <li><a href ="about.html">About Me</a></li>
-            <li><a href ="project.html">My Projects</a></li>
-            <li><a href ="contact.html">Contact Info</a></li>
-        </ul>
+        <div id="wrapper">
+            <div id ="banner">
+                <h1>Daniel Vong Portfolio</h1>
+            </div>
+            <header>
+                <nav>
+                    <a href ="index.html">Home</a> |
+                    <a href ="about.html">About Me</a> |
+                    <a href ="project.html">My Projects</a> |
+                    <a href ="contact.html">Contact Me</a>
+                </nav>
+            </header>
+        </div>
+        <div id="footer">
+            <h5>Site by Daniel Vong</h5>
+        </div>
     </body>
 </html>
