--- a/project.html
+++ b/project.html
@@ -18,8 +18,24 @@
                 </nav>
             </header>
             <article>
-                <h3>Networking final project</h3>
+                <h3>Intro to Networking 2 Final Project</h3>
                 <p>Networking topology made in packet tracer of a network between Miami, Toronto, Mexico, and Vancouver</p>
+                <p>This project was done to showcase my ability to implement networking concepts such as BGP, OSPF, and inter-vlan routing</p>
+                <section>
+                    <h3>University/College course enrolment system</h3>
+                    <p>Program designed in Python by myself and four colleagues for course enrolment purposes</p>
+                    <p>Some features include filereading for easy implementation of existing records, and admin management to add/remove students, grades, and courses</p>
+                </section>
+                <section>
+                    <h3>Intro to Networking 1 Final Project</h3>
+                    <p>Network topology made in Packet tracer that showcased my ability to make proper subnets in a network</p>
+                    <p>The topology involved an enterprise environment where each building in the network had a different amount of users and it was my responsibility to properly put each building into a subnet that fit the users.</p>
+                </section>
+                <section>
+                    <h3>Facets - Game developed during my time in the Game dev program at OTU</h3>
+                    <p>Facets is a 2d pixelart style puzzle game where you play as a test subject in a facility.</p>
+                    <p>The general gameplay includes learning about what powers you have and using them to solve puzzles in each room.</p>
+                </section>
                 
             </article>
         </div>
