Added footers to each page

--- a/about.html
+++ b/about.html
@@ -28,5 +28,8 @@
                 <p>Ever since then I've made it a goal to ensure that others do not fall victim to cyberthreats as I once did</p>
             </article>
         </div>
+        <footer>
+            <h5>Site by Daniel Vong</h5>
+        </footer>
     </body>
 </html>
