--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,8 @@
                 <input type="submit" value ="Submit">
             </form>
         </div>
-        <div id="footer">
+        <footer>
             <h5>Site by Daniel Vong</h5>
-        </div>
+        </footer>
     </body>
 </html>
