--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 </nav>
             </header>
         </div>
-        <div id="footer">
+        <footer>
             <h5>Site by Daniel Vong</h5>
-        </div>
+        </footer>
     </body>
 </html>
