--- a/project.html
+++ b/project.html
@@ -35,9 +35,12 @@
                     <h3>Facets - Game developed during my time in the Game dev program at OTU</h3>
                     <p>Facets is a 2d pixelart style puzzle game where you play as a test subject in a facility.</p>
                     <p>The general gameplay includes learning about what powers you have and using them to solve puzzles in each room.</p>
-                </section>
-                
+                </section> 
             </article>
+            
         </div>
+        <footer>
+            <h5>Site by Daniel Vong</h5>
+        </footer>
     </body>
 </html>
