Added CSS stylings to each page. Adjustments for common viewports

--- a/about.html
+++ b/about.html
@@ -2,6 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link href="style.css" rel="stylesheet" type="text/css">
+        <link href="tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)">
+        <link href="phone.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
+        <link href="desktop.css" rel="stylesheet" type="text/css" media="only screen and (min-width:960px)">
         <title>About Me - Daniel Vong Portfolio Web and Script Assignment 1</title>
     </head>
     <body>
@@ -17,17 +21,20 @@
             </header>
             <article>
                 <aside>
-                    <p>Personal Headshot 2025</p>
+                    <h5>Personal Headshot 2025</h5>
                     <img src="my_headshot.jpg">
                 </aside>
                 <h3>About me</h3>
                 <p>Hi, my name is Daniel Vong. I am a second year Networking and IT student at Ontario Tech University!</p>
-                <p>I've developed an interest in the field of cybersecurity ever since I fell victim to a phishing link</p>
-                <p>Ever since then I've made it a goal to ensure that others do not fall victim to cyberthreats as I once did</p>
+                <p>I've developed an interest in the field of cybersecurity ever since I fell victim to a phishing link.</p>
+                <p>Ever since then I've made it a goal to ensure that others do not fall victim to cyberthreats as I once did.</p>
+                <video controls width="640" height="360" poster="poster.jpg">
+                    <source src="video.mp4" type="video/mp4">
+                </video>
             </article>
         </div>
         <footer>
-            <h5>Site by Daniel Vong</h5>
+            <h5>© 2025 Site by Daniel Vong</h5>
         </footer>
     </body>
 </html>
