--- a/project.html
+++ b/project.html
@@ -2,6 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link href="style.css" rel="stylesheet" type="text/css">
+        <link href="tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)">
+        <link href="phone.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
+        <link href="desktop.css" rel="stylesheet" type="text/css" media="only screen and (min-width:960px)">
         <title>Projects - Daniel Vong Portfolio Web and Script Assignment 1</title>
     </head>
     <body>
@@ -16,21 +20,21 @@
                 </nav>
             </header>
             <article>
-                <h3>Intro to Networking 2 Final Project</h3>
-                <p>Networking topology made in packet tracer of a network between Miami, Toronto, Mexico, and Vancouver</p>
-                <p>This project was done to showcase my ability to implement networking concepts such as BGP, OSPF, and inter-vlan routing</p>
+                <h3>Intro to Networking 2 Final Project - 2025</h3>
+                <p>Networking topology made in packet tracer of a network between Miami, Toronto, Mexico, and Vancouver.</p>
+                <p>This project was done to showcase my ability to implement networking concepts such as BGP, OSPF, and inter-vlan routing.</p>
                 <section>
-                    <h3>University/College course enrolment system</h3>
-                    <p>Program designed in Python by myself and four colleagues for course enrolment purposes</p>
-                    <p>Some features include filereading for easy implementation of existing records, and admin management to add/remove students, grades, and courses</p>
+                    <h3>OOP for IT - University/College course enrolment system - 2025</h3>
+                    <p>Program designed in Python by myself and four colleagues for course enrolment purposes.</p>
+                    <p>Some features include filereading for easy implementation of existing records, and admin management to add/remove students, grades, and courses.</p>
                 </section>
                 <section>
-                    <h3>Intro to Networking 1 Final Project</h3>
-                    <p>Network topology made in Packet tracer that showcased my ability to make proper subnets in a network</p>
+                    <h3>Intro to Networking 1 Final Project - 2024</h3>
+                    <p>Network topology made in Packet tracer that showcased my ability to make proper subnets in a network.</p>
                     <p>The topology involved an enterprise environment where each building in the network had a different amount of users and it was my responsibility to properly put each building into a subnet that fit the users.</p>
                 </section>
                 <section>
-                    <h3>Facets - Game developed during my time in the Game dev program at OTU</h3>
+                    <h3>Game Development Workshop 2 - Facets - 2023</h3>
                     <p>Facets is a 2d pixelart style puzzle game where you play as a test subject in a facility.</p>
                     <p>The general gameplay includes learning about what powers you have and using them to solve puzzles in each room.</p>
                 </section> 
@@ -38,7 +42,7 @@
             
         </div>
         <footer>
-            <h5>Site by Daniel Vong</h5>
+            <h5>© 2025 Site by Daniel Vong</h5>
         </footer>
     </body>
 </html>
