--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)">
+    <link href="phone.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
+    <link href="desktop.css" rel="stylesheet" type="text/css" media="only screen and (min-width:960px)">
     <title>Homepage - Daniel Vong Portfolio Web and Script Assignment 1</title>
 </head>
 
@@ -19,7 +23,7 @@
         </header>
     </div>
     <footer>
-        <h5>Site by Daniel Vong</h5>
+        <h5>© 2025 Site by Daniel Vong</h5>
     </footer>
 </body>
 
