--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,5 @@
+<!--All comments about head, CSS sheets, div "wrapper", header, nav, and footer inside index.html***-->
+<!--Daniel Vong 100870344 daniel.vong@ontariotechu.net-->
 <!DOCTYPE html>
 <html>
     <head>
@@ -19,14 +21,19 @@
                     <a href ="contact.html">Contact Me</a>
                 </nav>
             </header>
+            <!--Form with three boxes for name, email, and the message they would like to send. The method="post" part means the information in each box will be sent to the server-->
             <form action="#" method="post">
+                <!--Title for the corresponding input box with the matching id name. In this case the id is "name"-->
                 <label for="name">Name:</label>
+                <!--Input box for names-->
                 <input type="text" id="name">
                 <label for="email">Email:</label>
                 <input type="text" id="email">
                 <label for="message">Comments:</label>
+                <!--Larger text space that can be expanded by the user if necessary. This is used so the website user can type in messages-->
                 <textarea name="message" rows="5" cols="20">Type Here
                 </textarea>
+                <!--Submit button -->
                 <input type="submit" value ="Submit">
             </form>
         </div>
