--- a/about.html
+++ b/about.html
@@ -1,3 +1,5 @@
+<!--All comments about head, CSS sheets, div "wrapper", header, nav, and footer inside index.html***-->
+<!--Daniel Vong 100870344 daniel.vong@ontariotechu.net-->
 <!DOCTYPE html>
 <html>
     <head>
@@ -19,16 +21,22 @@
                     <a href ="contact.html">Contact Me</a>
                 </nav>
             </header>
+            <!--Article semantic tag to group my about me information together-->
             <article>
+                <!--Semantic tag for things I intend on placing on the right side of the screen-->
                 <aside>
+                    <!--Header element-->
                     <h5>Personal Headshot 2025</h5>
+                    <!--Image element to include an image on my website. src is the source of the image and requires an image with that same name to be accessible by the html file-->
                     <img src="my_headshot.jpg">
                 </aside>
                 <h3>About me</h3>
                 <p>Hi, my name is Daniel Vong. I am a second year Networking and IT student at Ontario Tech University!</p>
                 <p>I've developed an interest in the field of cybersecurity ever since I fell victim to a phishing link.</p>
                 <p>Ever since then I've made it a goal to ensure that others do not fall victim to cyberthreats as I once did.</p>
+                <!--Video controls that dictate the height, width and poster of the video-->
                 <video controls width="640" height="360" poster="poster.jpg">
+                    <!--Video source. Uses a file named video.mp4 as its source. The type section indicates what file type it is-->
                     <source src="video.mp4" type="video/mp4">
                 </video>
             </article>
