--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
+<!--Daniel Vong 100870344 daniel.vong@ontariotechu.net-->
 <!DOCTYPE html>
 <html>
-
+<!--All metadatas for the website such as the character set, CSS files that the file will call from and the title of the page-->
 <head>
     <meta charset="UTF-8">
     <link href="style.css" rel="stylesheet" type="text/css">
+    <!--Tablet viewport for widths between 481-960px-->
     <link href="tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)">
+    <!--Mobile phone viewport for widths no greater than 480px-->
     <link href="phone.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
+    <!--Desktop/laptop viewport for widths larger than 960px-->
     <link href="desktop.css" rel="stylesheet" type="text/css" media="only screen and (min-width:960px)">
     <title>Homepage - Daniel Vong Portfolio Web and Script Assignment 1</title>
 </head>
 
 <body>
+    <!--Div element named wrapper used here to contain header and nav elements for easy control in the CSS file-->
     <div id="wrapper">
+        <!--Header semantic tag for the top of the page-->
         <header>
             <h1>Daniel Vong Portfolio</h1>
+            <!--Navigation semantic tag with links to the other pages of the website-->
             <nav>
+                <!--Hyperlinks to the other pages of the website-->
                 <a href="index.html">Home</a> |
                 <a href="about.html">About Me</a> |
                 <a href="project.html">My Projects</a> |
@@ -22,6 +30,7 @@
             </nav>
         </header>
     </div>
+    <!--Footer semantic tag with copyright and name-->
     <footer>
         <h5>© 2025 Site by Daniel Vong</h5>
     </footer>
