Added email to footer and changed poster image

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <!--Footer semantic tag with copyright and name-->
     <footer>
         <h5>© 2025 Site by Daniel Vong</h5>
+        <p>Email: daniel.vong@ontariotechu.net</p>
     </footer>
 </body>
 
