--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,7 @@
         </div>
         <footer>
             <h5>© 2025 Site by Daniel Vong</h5>
+            <p>Email: daniel.vong@ontariotechu.net</p>
         </footer>
     </body>
 </html>
