--- a/project.html
+++ b/project.html
@@ -42,6 +42,7 @@
         </div>
         <footer>
             <h5>© 2025 Site by Daniel Vong</h5>
+            <p>Email: daniel.vong@ontariotechu.net</p>
         </footer>
     </body>
 </html>
