--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                 <p>I've developed an interest in the field of cybersecurity ever since I fell victim to a phishing link.</p>
                 <p>Ever since then I've made it a goal to ensure that others do not fall victim to cyberthreats as I once did.</p>
                 <!--Video controls that dictate the height, width and poster of the video-->
-                <video controls width="640" height="360" poster="poster.jpg"~>
+                <video controls width="640" height="360" poster="poster.jpg">
                     <!--Video source. Uses a file named video.mp4 as its source. The type section indicates what file type it is-->
                     <source src="video.mp4" type="video/mp4">
                 </video>
